# boids-service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Line.cpp  Line.h  Quadtree.cpp  Quadtree.h  README.md  deploy.sh  main.cpp  map.pb.cc  map.pb.h
include/: Boid.h  Flock.h  HttpServer.h  Line.h  Macros.h  Map.h  Parameters.h  Pos2D.h  QuadTreeNode.h  Quadtree.h  map.pb.h
proto/: generate_cpp.sh  map.proto
proto/doc/: docs.md  index.html
src/: Boid.cpp  Flock.cpp  HttpServer.cpp  Line.cpp  Map.cpp  Parameters.cpp  Pos2D.cpp  QuadTreeNode.cpp  Quadtree.cpp  map.pb.cc
tests/: Boid_test.cpp  Line_test.cpp
